Person information detail pending. (Pass informations between vc).

--- a/movie-app/Modules/Movie-Details/MovieDetailsStoryboard.storyboard
+++ b/movie-app/Modules/Movie-Details/MovieDetailsStoryboard.storyboard
@@ -228,7 +228,7 @@
                         <outlet property="voteLabel" destination="jZr-2C-9BP" id="Uyk-2r-XsQ"/>
                         <outlet property="voteView" destination="aro-6M-C4N" id="Q4l-cQ-lkj"/>
                         <outlet property="yearLabel" destination="AfN-fb-ytP" id="BAn-nt-BHw"/>
-                        <segue destination="yvu-od-44f" kind="presentation" identifier="showPersonDetail" modalPresentationStyle="pageSheet" id="mDN-bW-fVw"/>
+                        <segue destination="yvu-od-44f" kind="presentation" identifier="showPersonDetail" id="rHu-Ut-wGv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tRV-HR-vj5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -238,7 +238,9 @@
         <!--PersonDetailsStoryboard-->
         <scene sceneID="b6X-vw-Fko">
             <objects>
-                <viewControllerPlaceholder storyboardName="PersonDetailsStoryboard" id="yvu-od-44f" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="PersonDetailsStoryboard" id="yvu-od-44f" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="SA5-XX-Q0x"/>
+                </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sww-08-eFR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1923" y="135"/>
